<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello dear user, I\'m afraid their is not much for you to do here. Hopefully this will change soon and you will be able to find a list of call logs here... </string>
    <string name="app_name">StalinPhone</string>
    <string name="stalin_button_start_trans">Try to guess what this button will do :)</string>
    <string name="stalin_button_stop_trans">Stop!</string>
    <string name="stalin_trans_service_started">Started transcription service</string>
    <string name="stalin_trans_service_stopped">Transcription completed</string>
    <string name="stalin_trans_service_label">StalinPhone transcription service</string>
    <string name="stalin_rec_service_label">StalinPhone recording service</string>
    <string name="stalin_rec_service_started">StalinPhone recording service started</string>
    <string name="stalin_rec_service_stopped">StalinPhone recording service started </string>
    <string name="stalin_button_start_rec">Start rec</string>
    <string name="stalin_button_stop_rec">Stop rec</string>
    <string name="stalin_otherrec_service_label">StalinPhone second recording service</string>
    <string name="stalinPhoneText">In the meantime why don\'t you head over to the StalinPhone directory on your storage card to check out all the recordings you have collected. \n\nYou could also check out \&quot;code.google.com/p/android-stalin-phone\&quot; to have a look at the source code for yourself. \n\nAll source contained in this project is licenced under the Apache License version 2.</string>

</resources>